--- a/reportesVC/templates/reportesVC/ejecutarReporte.html
+++ b/reportesVC/templates/reportesVC/ejecutarReporte.html
@@ -45,7 +45,7 @@
                                 </div>
                                     <!--input type="text" name="{{variable.nombre}}" id="variable{{ forloop.counter }}" value="{{ variable.id }}" /-->
                             {% else %}
-                                <!--label for="{{ variable.valor }}">{{ variable.nombre }}</label-->
+                                <!--label for="{{ tipo_valor }}">{{ variable.nombre }}</label-->
                                 <input type="hidden" name="{{ variable.id }}_{{variable.nombre}}" id="{{ variable.id }}" value="{{ tipo_valor }}" />
                                 <!--input type="text" name="{{variable.nombre}}" id="variable{{ forloop.counter }}" value="{{ variable.id }}" /-->
                                 <!--br /-->
