--- a/reportesVC/templates/reportesVC/index.html
+++ b/reportesVC/templates/reportesVC/index.html
@@ -9,13 +9,13 @@
 
 {% block content %}
     <div class="center">
-        <p>Esta disponible la creación de reportes:</p>
+        <!--p>Esta disponible la creación de reportes:</p-->
         {% if tipos_reportes %}
             {% with status="algo"%}
             <ul class="inicio">
             {% for tipo in tipos_reportes %}
                 <!--li><a href="/reportesVC/{{ tipo.nombre }}/">{{ tipo.nombre }}</a></li-->
-                <li><a href="{% url 'reportesVC:reportes' tipoNombre=tipo.nombre status='Nuevo'%}">{{ tipo.nombre }}</a></li>
+                <!--li><a href="{% url 'reportesVC:reportes' tipoNombre=tipo.nombre status='Nuevo'%}">{{ tipo.nombre }}</a></li-->
 
             {% endfor %}
             {% endwith %}
