--- a/reportesVC/static/reportesVC/style.css
+++ b/reportesVC/static/reportesVC/style.css
@@ -93,4 +93,19 @@ body {
     padding: 15px;
 }
 
+.listaArchivos{
+    list-style-type: none;
+    /*border: 1px solid red;*/
+}
 
+.detalles{
+    display: none;
+}
+
+.masDetalle{
+    color: white;
+    width:12px;
+    border: 0px solid white;
+    background-color: #4467a3;
+    padding: 1px;
+}
