--- a/reportesVC/static/reportesVC/style.css
+++ b/reportesVC/static/reportesVC/style.css
@@ -98,6 +98,11 @@ body {
     /*border: 1px solid red;*/
 }
 
+.calendario{
+    color: darkblue;
+    /*border: 1px solid red;*/
+}
+
 .detalles{
     display: none;
 }
