--- a/reportesVC/templates/reportesVC/conciliaciones.html
+++ b/reportesVC/templates/reportesVC/conciliaciones.html
@@ -19,7 +19,7 @@
                     <div class="row">
                         <div class="col-sm-6 text-right"></div>
                         <div class="col-sm-6 text-left">
-                            <button class="submitForm" type="submit">{% bootstrap_icon "star" %} Conciliar</button>
+                            <button class="submitForm" type="submit" name="conciliar">{% bootstrap_icon "star" %} Conciliar</button>
                         </div>
                     </div>
 
