Cambios para bajar archivo

--- a/reportesVC/templates/reportesVC/conciliaciones.html
+++ b/reportesVC/templates/reportesVC/conciliaciones.html
@@ -19,7 +19,7 @@
                     <div class="row">
                         <div class="col-sm-6 text-right"></div>
                         <div class="col-sm-6 text-left">
-                            <button class="submitForm" type="submit" name="conciliar">{% bootstrap_icon "star" %} Conciliar</button>
+                            <button class="submitForm" type="submit" name="boton" value="conciliar">{% bootstrap_icon "star" %} Conciliar</button>
                         </div>
                     </div>
 
@@ -69,8 +69,8 @@
                             <input type="file" name="myfile">
                         </div>
                         <div class="col-sm-6 text-left">
-                            <button class="submitForm" type="submit" name="subeArchivo">{% bootstrap_icon "star" %}Sube Archivo</button>
-                            <button class="submitForm" type="submit" name="bajaArchivo">{% bootstrap_icon "star" %}Baja Archivo</button>
+                            <button class="submitForm" type="submit" name="boton" value="subeArchivo">{% bootstrap_icon "star" %}Sube Archivo</button>
+                            <button class="submitForm" type="submit" name="boton" value="bajaArchivo">{% bootstrap_icon "star" %}Baja Archivo</button>
                         </div>
                     </div>
                 </form>
