--- a/reportesVC/templates/conta/conciliacionBancos.html
+++ b/reportesVC/templates/conta/conciliacionBancos.html
@@ -1,16 +1,16 @@
-{% extends 'reportesVC/base.html' %}
+{% extends '../base.html' %}
 {% load bootstrap3 %}
 
 {% block tituloPagina %}
-    Página de ejecucion de conciliacion [{{tipo_nombre}}]
+    Página de ejecucion de conciliacion [{{tipo_nombre_largo}}]
 {% endblock %}
 
 {% block HeaderPagina %}
-    Página de ejecucion de conciliacion [{{tipo_nombre}}]
+    Página de ejecucion de conciliacion [{{tipo_nombre_largo}}]
 {% endblock %}
 
 {% block content %}
-     <div class="row">
+     <div class="row textoBlanco">
         <div class="col-sm-1"></div>
         <div class="col-sm-11">
                <br>
