--- a/reportesVC/templates/registration/logged_out.html
+++ b/reportesVC/templates/registration/logged_out.html
@@ -1,11 +1,11 @@
-{% extends 'reportesVC/base.html' %}
+{% extends '../base.html' %}
 {% load bootstrap3 %}
 
 
 {% block title %}
-<h2>Logout</h2>
+<h2 class="textoBlanco">Logout</h2>
 {% endblock %}
 
 {% block content %}
-<p>You have been loged out</p>
+<p class="textoBlanco">You have been loged out</p>
 {% endblock %}
