--- a/reportesVC/templates/reportesVC/ejecutarCalculo.html
+++ b/reportesVC/templates/reportesVC/ejecutarCalculo.html
@@ -1,4 +1,4 @@
-{% extends 'reportesVC/base.html' %}
+{% extends '../base.html' %}
 {% load bootstrap3 %}
 
 {% block tituloPagina %}
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="row">
+    <div class="row textoBlanco">
         <div class="col-sm-1"></div>
         <div class="col-sm-11">
             <p>Subir o sustituir los archivos de configuración:</p>
