--- a/reportesVC/templates/registration/login.html
+++ b/reportesVC/templates/registration/login.html
@@ -1,14 +1,14 @@
-{% extends 'reportesVC/base.html' %}
+{% extends '../base.html' %}
 {% load bootstrap3 %}
 
 
 {% block title %}
-<h2>Login</h2>
+<h2 class="textoBlanco">Login</h2>
 {% endblock %}
 
 {% block content %}
 
-    <div class="row">
+    <div class="row textoBlanco">
         <div class="col-sm-3 text-left">
         </div>
         <div class="col-sm-6 text-center">
