--- a/reportesVC/templates/registration/password_reset.html
+++ b/reportesVC/templates/registration/password_reset.html
@@ -1,13 +1,13 @@
-{% extends 'reportesVC/base.html' %}
+{% extends 're portesVC/base.html' %}
 {% load bootstrap3 %}
 
 {% block title %}
-<h2>Password Reset</h2>
+<h2 class="textoBlanco">Password Reset</h2>
 {% endblock %}
 
 {% block content %}
 
-<form action="" method="post">{% csrf_token %}
+<form action="" method="post" class="textoBlanco">{% csrf_token %}
     {% if form.email.errors %} {{ form.email.errors }} {% endif %}
         <p>{{ form.email }}</p> 
     <input type="submit" class="btn btn-default btn-lg" value="Reset password" />
