--- a/reportesVC/templates/registration/password_reset_done.html
+++ b/reportesVC/templates/registration/password_reset_done.html
@@ -1,11 +1,11 @@
-{% extends 'reportesVC/base.html' %}
+{% extends '../base.html' %}
 {% load bootstrap3 %}
 
 
 {% block title %}
-<h2>ResetDone</h2>
+<h2 class="textoBlanco">ResetDone</h2>
 {% endblock %}
 
 {% block content %}
-<p>We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.</p>
+<p class="textoBlanco">We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.</p>
 {% endblock %}
