--- a/reportesVC/templates/reportesVC/detalleCalculo.html
+++ b/reportesVC/templates/reportesVC/detalleCalculo.html
@@ -1,4 +1,4 @@
-{% extends 'reportesVC/base.html' %}
+{% extends '../base.html' %}
 {% load bootstrap3 %}
 
 {% block tituloPagina %}
@@ -10,6 +10,7 @@
 {% endblock %}
 
 {% block content %}
+	<div class="textoBlanco">
 	<p>Se ejecuto el reporte con la siguiente informacion:</p>
 	<ul>
 		<li>ID: {{ object.id }}</li>
@@ -30,4 +31,5 @@
 		{% csrf_token %}
 		<button class="submitForm" type="submit">{% bootstrap_icon "star" %}Descarga Archivo</button>
 	</form>
+	</div>
 {% endblock %}
