--- a/reportesVC/templates/base.html
+++ b/reportesVC/templates/base.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="{% static 'reportesVC/DT_bootstrap.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'reportesVC/style.css' %}" />
-
+    <link rel="shortcut icon" type="image/png" href="{% static 'reportesVC/favicon.ico' %}"/>
 
 </head>
 <body>
