--- a/reportesVC/templates/base.html
+++ b/reportesVC/templates/base.html
@@ -14,7 +14,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>{% block tituloPagina %}Contravel Desarrollos{% endblock %}</title>
+    <title>{% block tituloPagina %}Contravel Desarrollo Kokai Web{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="{% static 'reportesVC/DT_bootstrap.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'reportesVC/style.css' %}" />
