--- a/reportesVC/templates/conta/conciliacionBancos.html
+++ b/reportesVC/templates/conta/conciliacionBancos.html
@@ -29,10 +29,10 @@
                             <ul class="listaArchivos">
                                 <li><input type="radio" name="CBAgencia" value="Contravel" checked="checked" title="Text to show">Contravel
                                 </li>
-                                <li><input type="radio" name="CBAgencia" value="VK">Viajes Kokai
+                                <!--li><input type="radio" name="CBAgencia" value="VK">Viajes Kokai
                                 </li>
                                 <li><input type="radio" name="CBAgencia" value="Otra">Otra
-                                </li>
+                                </li-->
                             </ul>
                         </div>
                          <div class="col-sm-9 text-left">
@@ -66,7 +66,7 @@
                         </div>
                         <div class="col-sm-6 text-left">
                             <button class="submitForm" type="submit" name="boton" value="subeArchivo">{% bootstrap_icon "star" %}Sube Archivo</button>
-                            <button class="submitForm" type="submit" name="boton" value="bajaArchivo">{% bootstrap_icon "star" %}Baja Archivo</button>
+                            <!--button class="submitForm" type="submit" name="boton" value="bajaArchivo">{% bootstrap_icon "star" %}Baja Archivo</button-->
                         </div>
                     </div>
                 </form>
