--- a/reportesVC/templates/conta/conciliacionIngresos.html
+++ b/reportesVC/templates/conta/conciliacionIngresos.html
@@ -26,10 +26,10 @@
                             <ul class="listaArchivos">
                                 <li><input type="radio" name="CBAgencia" value="Contravel" checked="checked" title="Text to show">Contravel
                                 </li>
-                                <li><input type="radio" name="CBAgencia" value="VK">Viajes Kokai
+                                <!--li><input type="radio" name="CBAgencia" value="VK">Viajes Kokai
                                 </li>
                                 <li><input type="radio" name="CBAgencia" value="Otra">Otra
-                                </li>
+                                </li-->
                             </ul>
                         </div>
                          <div class="col-sm-9 text-left">
