--- a/reportesVC/templates/conta/conciliacionBancos.html
+++ b/reportesVC/templates/conta/conciliacionBancos.html
@@ -66,7 +66,7 @@
                         </div>
                         <div class="col-sm-6 text-left">
                             <button class="submitForm" type="submit" name="boton" value="subeArchivo">{% bootstrap_icon "star" %}Sube Archivo</button>
-                            <!--button class="submitForm" type="submit" name="boton" value="bajaArchivo">{% bootstrap_icon "star" %}Baja Archivo</button-->
+                            <button class="submitForm" type="submit" name="boton" value="bajaArchivo">{% bootstrap_icon "star" %}Baja Archivo</button>
                         </div>
                     </div>
                 </form>
